@@ -5,22 +5,22 @@ class ApplicationHelperTest < ActionView::TestCase
     date = Date.today + 5.days
     assert_equal date.strftime("%b %d"), simple_date(date)
   end
-  
+
   test "should show date today" do
     date = Date.today
     assert_equal 'Today', simple_date(date)
   end
-  
+
   test "should show date yesterday" do
     date = Date.today - 1.day
     assert_equal 'Yesterday', simple_date(date)
   end
-  
+
   test "should show date tomorrow" do
     date = Date.today + 1.day
     assert_equal 'Tomorrow', simple_date(date)
   end
-  
+
   test "should show full date from last year" do
     date = Date.today - 1.year
     assert_equal date.strftime("%b %d, %Y"), simple_date(date)
@@ -30,7 +30,7 @@ class ApplicationHelperTest < ActionView::TestCase
     time = Time.now
     assert_equal time.strftime("at %I:%M %p"), simple_time(time)
   end
-  
+
   test "should show full time from yesterday" do
     time = Time.now - 1.day
     time += 2.days if time.year != Time.now.year # Test would fail if run on Jan 1st otherwise
@@ -41,19 +41,20 @@ class ApplicationHelperTest < ActionView::TestCase
     time = Time.now - 1.year
     assert_equal time.strftime("on %b %d, %Y at %I:%M %p"), simple_time(time)
   end
-  
+
   test "should show sort field helper" do
     assert sort_field_helper("first_name DESC", "last_name", "First Name").kind_of?(String)
   end
-  
+
   test "should show sort field helper with same order" do
     assert sort_field_helper("first_name", "first_name", "First Name").kind_of?(String)
   end
-  
+
   test "should show recent activity" do
     assert recent_activity(nil).kind_of?(String)
     assert recent_activity('').kind_of?(String)
     assert recent_activity(Time.now).kind_of?(String)
+    assert recent_activity(Time.now - 12.hours).kind_of?(String)
     assert recent_activity(Time.now - 1.day).kind_of?(String)
     assert recent_activity(Time.now - 2.days).kind_of?(String)
     assert recent_activity(Time.now - 1.week).kind_of?(String)
@@ -61,7 +62,7 @@ class ApplicationHelperTest < ActionView::TestCase
     assert recent_activity(Time.now - 1.year).kind_of?(String)
     assert recent_activity(Time.now - 2.year).kind_of?(String)
   end
-  
+
   test "should display status" do
     assert display_status(nil).kind_of?(String)
     assert display_status('').kind_of?(String)
