@@ -3,6 +3,7 @@
 * Enhancements
   * Sticky filters now combines duplicate tags
   * Minor graphical tag changes on calendar
+  * Stickies can now have a due time and duration
 
 * Bug Fix
   * Email setting checkboxes for project notifications are no longer incorrectly disabled
